commiting 4 and 5 after editing

--- a/jsc4.html
+++ b/jsc4.html
@@ -40,5 +40,7 @@
 // see screenshots for 'for' loop
 // see screenshots for while loop 	
 	</script>
+
+	<p>this is just a dummy text</p>
 </body>
 </html>
