--- a/jsc5.html
+++ b/jsc5.html
@@ -33,7 +33,7 @@
 
 		
 	</script>
-
+    <p>hi this is just for fun</p>
 
 	<!-- put javascript at the end of the body as best practise-->
 </body>
