this is commit for other two files

--- a/jsc5.html
+++ b/jsc5.html
@@ -34,6 +34,7 @@
 		
 	</script>
     <p>hi this is just for fun</p>
+    <p>editied one more time</p>
 
 	<!-- put javascript at the end of the body as best practise-->
 </body>
